--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -14,16 +14,28 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    
   }
-  
+  .main-container{
+    font-family: Arial, sans-serif;
+    height: 100vh; /* Full viewport height */
+    width: 100vw;  /* Full viewport width */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
   /* Login Container */
-  .login-container {
+  .login-container { 
     background-color: #fff;
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
+    justify-content: center;
+    text-align: center;
+    margin: 2rem;
   }
   
   .login-container h2 {
